feat: add Tauri backend commands and aid/aidiff CLI launcher

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "version": "0.1.0",
   "type": "module",
+  "bin": {
+    "aid": "./cli/aid",
+    "aidiff": "./cli/aid"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
