Rename project from ai-diff to ai-review
- Rename package.json name and bin entries (aid/aidiff → air)
- Update Cargo.toml package name and lib name (ai_diff_lib → ai_review_lib)
- Update tauri.conf.json app name, identifier, and window title
- Rename CLI script (aid → air) and update all references
- Update CLI install script to install 'air' instead of 'aid/aidiff'
- Update Rust main.rs to reference ai_review_lib
- Update README.md with new project name and CLI commands
- Update all documentation (FEATURES.md, PLAN.md, USAGE.md, SETUP_NOTES.md, etc.)
- Update PR_DESCRIPTION.md, COMPLETION_SUMMARY.md, CLEANUP_SUMMARY.md

All references to ai-diff/aid/aidiff have been replaced with ai-review/air throughout the codebase and documentation.

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "ai-diff",
+  "name": "ai-review",
   "private": true,
   "version": "0.1.0",
   "type": "module",
   "bin": {
-    "aid": "./cli/aid",
-    "aidiff": "./cli/aid"
+    "air": "./cli/air"
   },
   "scripts": {
     "dev": "vite",
