--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ai-diff"
+name = "ai-review"
 version = "0.1.0"
 description = "AI Code Review Tool - Review AI-generated code diffs with inline comments"
 authors = ["Nacho Lopez"]
@@ -11,7 +11,7 @@ edition = "2021"
 # The `_lib` suffix may seem redundant but it is necessary
 # to make the lib name unique and wouldn't conflict with the bin name.
 # This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
-name = "ai_diff_lib"
+name = "ai_review_lib"
 crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
