--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -144,3 +144,43 @@ jobs:
           generate_release_notes: true
           files: |
             release-artifacts/*
+
+  update-homebrew:
+    name: Update Homebrew Cask
+    runs-on: ubuntu-latest
+    needs: release
+
+    steps:
+      - name: Get version from tag
+        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+
+      - name: Download DMGs and compute checksums
+        run: |
+          curl -sL "https://github.com/mrmans0n/ai-review/releases/download/v${VERSION}/AI.Review_${VERSION}_aarch64.dmg" -o arm.dmg
+          curl -sL "https://github.com/mrmans0n/ai-review/releases/download/v${VERSION}/AI.Review_${VERSION}_x64.dmg" -o intel.dmg
+          echo "SHA_ARM=$(shasum -a 256 arm.dmg | cut -d' ' -f1)" >> $GITHUB_ENV
+          echo "SHA_INTEL=$(shasum -a 256 intel.dmg | cut -d' ' -f1)" >> $GITHUB_ENV
+
+      - name: Checkout homebrew-tap
+        uses: actions/checkout@v4
+        with:
+          repository: mrmans0n/homebrew-tap
+          token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+
+      - name: Checkout release workflow scripts
+        uses: actions/checkout@v4
+        with:
+          path: _ai-review
+          sparse-checkout: .github/workflows/update-cask.py
+          sparse-checkout-cone-mode: false
+
+      - name: Update cask
+        run: python3 _ai-review/.github/workflows/update-cask.py
+
+      - name: Commit and push
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add Casks/ai-review.rb
+          git commit -m "Update ai-review cask to ${VERSION}"
+          git push
