--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,10 +20,6 @@ jobs:
             os: macos-latest
             artifact_name: tauri-macos-arm
             rust_target: aarch64-apple-darwin
-          - name: macos-intel
-            os: macos-latest
-            artifact_name: tauri-macos-intel
-            rust_target: x86_64-apple-darwin
           - name: linux
             os: ubuntu-22.04
             artifact_name: tauri-linux
@@ -154,12 +150,10 @@ jobs:
       - name: Get version from tag
         run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
 
-      - name: Download DMGs and compute checksums
+      - name: Download DMG and compute checksum
         run: |
           curl -sL "https://github.com/mrmans0n/ai-review/releases/download/v${VERSION}/AI.Review_${VERSION}_aarch64.dmg" -o arm.dmg
-          curl -sL "https://github.com/mrmans0n/ai-review/releases/download/v${VERSION}/AI.Review_${VERSION}_x64.dmg" -o intel.dmg
           echo "SHA_ARM=$(shasum -a 256 arm.dmg | cut -d' ' -f1)" >> $GITHUB_ENV
-          echo "SHA_INTEL=$(shasum -a 256 intel.dmg | cut -d' ' -f1)" >> $GITHUB_ENV
 
       - name: Checkout homebrew-tap
         uses: actions/checkout@v4
