--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@catppuccin/highlightjs": "^1.0.1",
+    "@fontsource/geist": "^5.2.8",
+    "@fontsource/geist-mono": "^5.2.7",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.6.0",
     "@tauri-apps/plugin-opener": "^2",
