add macOS build-and-install script with npm script shortcut
Adds a `build-install-macos.sh` script that builds the Tauri app and
installs it to `/Applications` (or `~/Applications` as a fallback when
the system directory is not writable). Registers the script as a
`tauri:build:install` npm script in `package.json` for convenience.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
+    "tauri:build:install": "bash ./cli/build-install-macos.sh",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run"
